--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
 #nav {
 }
 
+.navbar {
+  height: 50px;
+  padding: 0;
+}
+
 .navbar-inverse {
   background-color: transparent;
   border-color: transparent;
@@ -20,6 +25,16 @@ body {
   margin: auto;
   background-color: #222;
   border-color: #080808;
+  width: 100%;
+  height: 100%;
+}
+
+.nav-link {
+  color: white;
+}
+a.nav-link:hover{
+    color: white;
+    opacity: 0.5;
 }
 
 #wrapper {
@@ -29,25 +44,23 @@ body {
   box-shadow: 0px 0px 225px 30px #333;
 }
 
+.col {
+  padding: 0;
+}
+
 @media (min-width: 992px) {
   .col-md-5 {
     text-align: left;
   }
 }
 
-ul {
-  float: right;
-  display: flex !important;
-}
-
-#about-content{
+#about-content {
   display: table;
 }
 
-.link-buttons{
+.link-buttons {
   display: table-row;
 }
-
 
 #contact-content {
   width: 100%;
@@ -94,6 +107,8 @@ ul {
   border-top-width: 2px;
   position: relative;
   bottom: -22px;
+  background-color: white;
+  width : 100%;
 }
 
 .sections-dummy {
@@ -118,8 +133,6 @@ ul {
 #dummy-bottom {
   background-color: #222222;
 }
-
-
 
 #profile-picture {
   margin: 0px;
@@ -150,7 +163,7 @@ ul {
 }
 
 .portfolio-img:hover {
-  opacity: .5;
+  opacity: 0.5;
 }
 
 h1 {
