--- a/style.css
+++ b/style.css
@@ -142,14 +142,18 @@ a.nav-link:hover{
 .thumbnail {
   padding: 0px;
   background-color: #333;
+  border-radius: 4px;
+  margin: 10px auto 10px auto;
+  width: 210px;
+  height: auto;
 }
 
 .thumbnail > p {
-  padding-top: 0px;
+  padding: 9px;
   margin: 0px;
 }
 
-.thumbnail .caption {
+.thumbnail .figure-caption {
   font-size: 12px;
   color: white;
 }
