--- a/style.css
+++ b/style.css
@@ -145,6 +145,14 @@ a.nav-link:hover{
   background-color: red;
 }
 
+.thumb{
+  padding : 5px !important;
+  background-color: red;
+}
+thumb{
+  padding : 5px !important;
+  background-color: red;
+}
 .thumbnail {
   padding: 0px;
   background-color: #333;
