--- a/style.css
+++ b/style.css
@@ -1,190 +1,215 @@
-body { 
-  min-height: 1500px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 20px;
-  background-color: #e2e2e2;
-  color: #555;
-  min-width: 350px;
+:root {
+	--background-body: white;
+	--background-about: #b3daff;
+	--background-skills: white;
+	--background-projects: white;
+	--background-contact: #e7e7e7;
+	--page-min-width: 780px;
 }
-
-#nav {
+body {
+	min-height: 1500px;
+	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	background-color: var(--background-body, white);
+	color: #555;
+	min-width: var(--page-min-width, 780px);
+	position: relative;
 }
-
-.navbar {
-  height: 50px;
-  padding: 0;
-}
-
-.navbar-inverse {
-  background-color: transparent;
-  border-color: transparent;
-}
-
-#navbar-container {
-  max-width: 1024px;
-  margin: auto;
-  background-color: #222;
-  border-color: #080808;
-  width: 100%;
-  height: 100%;
-}
-
-.nav-link {
-  color: white;
-}
-a.nav-link:hover{
-    color: white;
-    opacity: 0.5;
-}
-
 #wrapper {
-  max-width: 1024px;
-  -moz-box-shadow: 0px 0px 225px 30px #333;
-  -webkit-box-shadow: 0px 0px 225px 30px #333;
-  box-shadow: 0px 0px 225px 30px #333;
+	padding: 0px;
 }
-
+#nav {}
+.navbar {
+	height: 75px;
+	padding: 0;
+	min-width: var(--page-min-width, 780px);
+}
+.navbar-inverse {
+	background-color: transparent;
+	border-color: transparent;
+}
+#navbar-container {
+	margin: auto;
+	background-color: #222;
+	border-color: #080808;
+	width: 100%;
+	height: 100%;
+}
+.nav-link {
+	color: white;
+}
+a.nav-link:hover {
+	color: white;
+	opacity: 0.5;
+}
 .col {
-  padding: 0;
+	padding: 0;
 }
-
 @media (min-width: 992px) {
-  .col-md-5 {
-    text-align: left;
-  }
+	.col-md-5 {
+		text-align: left;
+	}
 }
-
 #about-content {
-  display: table;
-  width: 100%;
+	display: table;
+	width: 100%;
+	background: var(--background-about, white);
 }
-
+#about-h1 {
+	font-weight: bold;
+	font-size: 4em;
+}
 .link-buttons {
-  display: table-row;
+	display: table-row;
 }
-
+.web-links {
+	font-size: 4em;
+	padding: 0px 10px 0px 10px;
+	display: inline-block;
+	width: 150px;
+}
 #contact-content {
-  width: 100%;
-  display: table;
-  /*display: inline-flex;*/
-  margin: auto;
+	width: 100%;
+	display: table;
+	background: var(--background-contact, white);
+	margin: auto;
 }
-
+#form>hr {
+	border-top: 2px solid rgba(0, 0, 0, .2);
+}
+#form-container {
+	background-color: white;
+	width: 660px;
+	margin: auto;
+	border-radius: 5px;
+	padding: 10px;
+}
+.form {
+	display: inline-block;
+	width: 90%;
+	border: 0px;
+}
+#submit-container {
+	width: 100%;
+}
+#submit-container>input {
+	font-size: 2em;
+}
 @-moz-document url-prefix() {
-  #contact-content {
-    display: inline-flex !important;
-  }
+	#contact-content {
+		display: inline-flex !important;
+	}
 }
-
 #contact-content-row {
-  margin: auto;
-  display: table-cell;
-  vertical-align: middle;
+	margin: auto;
+	display: table-cell;
+	vertical-align: middle;
 }
-
 .section {
-  min-height: 300px;
-  padding: 20px 50px 20px 50px;
+	min-height: 300px;
+	padding: 20px 50px 20px 50px;
 }
-
 .section-title {
-  margin: 0px;
-  padding: 10px 20px 10px 20px;
-  background-color: #333;
-  color: white;
+	margin: 0px;
+	padding: 10px 20px 10px 20px;
+	background-color: #333;
+	color: white;
 }
-
 .section-title-text {
-  margin: 0px;
-  padding: 0 10px 0 10px;
-  display: inline-block;
-  background-color: #333;
-  position: sticky;
-  z-index: 1;
+	margin: 0px;
+	padding: 0 10px 0 10px;
+	display: inline-block;
+	background-color: #333;
+	position: sticky;
+	z-index: 1;
 }
-
 .section-title-hr {
-  margin: 0;
-  border-top-width: 2px;
-  position: relative;
-  bottom: -22px;
-  background-color: white;
-  width : 100%;
+	margin: 0;
+	border-top-width: 2px;
+	position: relative;
+	bottom: -22px;
+	background-color: white;
+	width: 100%;
 }
-
 .sections-dummy {
-  padding: 50px 0px 0px 0px;
-  height: 0px;
+	background-color: #222222;
 }
-
-#profile-picture {
-  border-radius: 50%;
-  height: auto;
-  max-width: 200px;
-}
-
-.profile-picture-col {
-  margin-bottom: 20px;
-}
-
 #dummy-top {
-  background-color: #222222;
+	padding: 75px 0px 0px 0px;
 }
-
 #dummy-bottom {
-  background-color: #222222;
+	background-color: #222222;
 }
-
 #profile-picture {
-  margin: 0px;
-  vertical-align: middle;
+	border-radius: 50%;
+	height: auto;
+	max-width: 200px;
 }
-
-.thumb-container{
-  padding : 5px !important;
+.profile-picture-col {
+	margin-bottom: 20px;
 }
-
+#profile-picture {
+	margin: 0px;
+	vertical-align: middle;
+}
+#skills-content {
+	padding: 20px;
+	background-color: var(--background-skills, white);
+}
+#skills-content>h1 {
+	margin: 10px 0px 10px 0px;
+}
+.icon {
+	margin: auto;
+}
+.icon>i {
+	font-size: 5em;
+}
+.icon>p {
+	font-size: 20px;
+	margin: 0;
+}
+#projects-content {
+	background-color: var(--background-projects, white);
+}
+#thumbnail-grid {
+	text-align: -webkit-center;
+	width: fit-content;
+	margin: auto;
+}
+.thumb-container {
+	padding: 5px !important;
+}
 .thumbnail {
-  padding: 0px;
-  background-color: #333;
-  border-radius: 4px;
-  margin: 0px auto 0px auto;
-  width: 210px;
-  height: auto;
+	padding: 0px;
+	background-color: #333;
+	border-radius: 4px;
+	margin: 10px;
+	width: 210px;
+	height: auto;
 }
-
-.thumbnail > p {
-  padding: 9px;
-  margin: 0px;
+.thumbnail>p {
+	padding: 9px;
+	margin: 0px;
 }
-
 .thumbnail .figure-caption {
-  font-size: 12px;
-  color: white;
+	font-size: 12px;
+	color: white;
 }
 .portfolio-img-bg {
-  background-color: black;
+	background-color: black;
 }
-
 .portfolio-img {
-  width: 100%;
-  opacity: 1;
+	width: 100%;
+	opacity: 1;
 }
-
 .portfolio-img:hover {
-  opacity: 0.5;
+	opacity: 0.5;
 }
-
 h1 {
-  margin-top: 0px;
-  margin-bottom: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
-
-.hr-no-margin {
-  //margin:5px;
-}
-
 .vertical-btn {
-  margin: 10px 0px 10px 0px;
+	margin: 10px 0px 10px 0px;
 }
- 
