--- a/style.css
+++ b/style.css
@@ -1,244 +1,246 @@
 :root {
-	--background-body: #313339;
-	--color-body: white;
-	--background-about: #1791D2;
-	--color-about: #313339;
-	--background-skills: white;
-	--color-skills: #1791D2;
-	--background-projects: #0576B8;
-	--color-projects: #313339;
-	--background-contact: white;
-	--color-contact: #1791D2;
-	--page-min-width: 780px;
+     --background-body: #313339;
+     --color-body: white;
+     --background-about: #1791D2;
+     --color-about: #313339;
+     --background-skills: white;
+     --color-skills: #1791D2;
+     --background-projects: #0576B8;
+     --color-projects: #313339;
+     --background-contact: white;
+     --color-contact: #1791D2;
+     --page-min-width: 780px;
 }
-body {
-	min-height: 1500px;
-	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 20px;
-	background-color: var(--background-body, white);
-	color: #555;
-	min-width: var(--page-min-width, 780px);
-	position: relative;
+ body {
+     min-height: 1500px;
+     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+     font-size: 20px;
+     background-color: var(--background-body, white);
+     color: #555;
+     min-width: var(--page-min-width, 780px);
+     position: relative;
 }
-#wrapper {
-	padding: 0px;
+ #wrapper {
+     padding: 0px;
 }
-#nav {}
-#nav-col{
-	display: flex;
+ #nav {
 }
-#navbar-name{
-	color:white;
+ #nav-col{
+     display: flex;
 }
-.navbar {
-	height: 75px;
-	padding: 0;
-	min-width: var(--page-min-width, 780px);
+ #navbar-name{
+     color:white;
 }
-.navbar-inverse {
-	background-color: transparent;
-	border-color: transparent;
+ .navbar {
+     height: 75px;
+     padding: 0;
+     min-width: var(--page-min-width, 780px);
 }
-#navbar-container {
-	margin: auto;
-	background-color: #222;
-	border-color: #080808;
-	width: 100%;
-	height: 100%;
+ .navbar-inverse {
+     background-color: transparent;
+     border-color: transparent;
 }
-.nav-link {
-	color: white;
+ #navbar-container {
+     margin: auto;
+     background-color: #222;
+     border-color: #080808;
+     width: 100%;
+     height: 100%;
 }
-a.nav-link:hover {
-	color: white;
-	opacity: 0.5;
+ .nav-link {
+     color: white;
 }
-.col {
-	padding: 0;
+ a.nav-link:hover {
+     color: white;
+     opacity: 0.5;
 }
-@media (min-width: 992px) {
-	.col-md-5 {
-		text-align: left;
-	}
+ .col {
+     padding: 0;
 }
-#about-content {
-	display: table;
-	width: 100%;
-	background-color: var(--background-about, white);
-	color: var(--color-about, white);
+ @media (min-width: 992px) {
+     .col-md-5 {
+         text-align: left;
+    }
 }
-#about-h1 {
-	font-weight: bold;
-	font-size: 4em;
+ #about-content {
+     display: table;
+     width: 100%;
+     background-color: var(--background-about, white);
+     color: var(--color-about, white);
 }
-.about-hr
-{
-	border-top :2px solid var(--color-about, white);
+ #about-h1 {
+     font-weight: bold;
+     font-size: 4em;
 }
-.skills-hr{
-	border-top : 2px solid rgba(0,0,0,0.1);
+ .about-hr {
+     border-top :2px solid var(--color-about, white);
 }
-.link-buttons {
-	display: block;
+ .skills-hr{
+     border-top : 2px solid rgba(0,0,0,0.1);
 }
-.web-links {
-	font-size: 4em;
-	padding: 0px 10px 0px 10px;
-	display: inline-block;
-	width: 150px;
+ .link-buttons {
+     display: block;
 }
-#contact-content {
-	width: 100%;
-	background-color: var(--background-contact, white);
-	margin: auto;
+ .web-links {
+     font-size: 4em;
+     padding: 0px 10px 0px 10px;
+     display: inline-block;
+     width: 150px;
 }
-#form-container>hr {
-	border-top: 2px solid rgba(0, 0, 0, .2);
-	padding :5px;
+ #contact-content {
+     width: 100%;
+     background-color: var(--background-contact, white);
+     margin: auto;
 }
-#form>hr {
-	border-top: 2px solid rgba(0, 0, 0, .2);
-	padding :5px;
+ #form-container>hr {
+     border-top: 2px solid rgba(0, 0, 0, .2);
+     padding :5px;
 }
-#form-container {
-	background-color: white;
-	width: 660px;
-	margin: auto;
-	border-radius: 5px;
-	padding: 10px;
+ #form>hr {
+     border-top: 2px solid rgba(0, 0, 0, .2);
+     padding :5px;
 }
-.form {
-	display: inline-block;
-	width: 100%;
-	border: 0px;
+ #form-container {
+     background-color: white;
+     width: 660px;
+     margin: auto;
+     border-radius: 5px;
+     padding: 10px;
 }
-#submit-container {
-	width: 100%;
+ .form {
+     display: inline-block;
+     width: 100%;
+     border: 0px;
 }
-#submit-container>input {
-	font-size: 2em;
+ #submit-container {
+     width: 100%;
 }
-#contact-content-row {
-	margin: auto;
-	vertical-align: middle;
+ #submit-container>input {
+     font-size: 2em;
 }
-.section-col{
-	max-width: 1200px;
-	margin: auto;
-	padding: 20px 50px 20px 50px;
+ #contact-content-row {
+     margin: auto;
+     vertical-align: middle;
 }
-.section {
-	min-height: 300px;
-	width: 100%;
+ .section-col{
+     max-width: 1200px;
+     margin: auto;
+     padding: 20px 50px 20px 50px;
 }
-.section-title {
-	margin: 0px;
-	padding: 10px 20px 10px 20px;
-	background-color: #333;
-	color: white;
+ .section {
+     min-height: 300px;
+     width: 100%;
 }
-.section-title-text {
-	margin: 0px;
-	padding: 0 10px 0 10px;
-	display: inline-block;
-	background-color: #333;
-	position: sticky;
-	z-index: 1;
+ .section-title {
+     margin: 0px;
+     padding: 10px 20px 10px 20px;
+     background-color: #333;
+     color: white;
 }
-.section-title-hr {
-	margin: 0;
-	border-top-width: 2px;
-	position: relative;
-	bottom: -22px;
-	background-color: white;
-	width: 100%;
+ .section-title-text {
+     margin: 0px;
+     padding: 0 10px 0 10px;
+     display: inline-block;
+     background-color: #333;
+     position: sticky;
+     z-index: 1;
 }
-.sections-dummy {
-	background-color: #222222;
+ .section-title-hr {
+     margin: 0;
+     border-top-width: 2px;
+     position: relative;
+     bottom: -22px;
+     background-color: white;
+     width: 100%;
 }
-#dummy-top {
-	padding: 75px 0px 0px 0px;
+ .sections-dummy {
+     background-color: #222222;
 }
-#dummy-bottom {
-	background-color: #222222;
+ #dummy-top {
+     padding: 75px 0px 0px 0px;
 }
-#profile-picture {
-	border-radius: 50%;
-	height: auto;
-	max-width: 300px;
+ #dummy-bottom {
+     background-color: #222222;
 }
-.profile-picture-col {
-	margin-bottom: 20px;
+ #profile-picture {
+     border-radius: 50%;
+     height: auto;
+     max-width: 300px;
 }
-#profile-picture {
-	margin: 0px;
-	vertical-align: middle;
+ .profile-picture-col {
+     margin-bottom: 20px;
 }
-#skills-content {
-	padding: 20px;
-	background-color: var(--background-skills, white);
+ #profile-picture {
+     margin: 0px;
+     vertical-align: middle;
 }
-#skills-content>h1 {
-	margin: 10px 0px 10px 0px;
-	font-weight : bold;
+ #skills-content {
+     padding: 20px;
+     background-color: var(--background-skills, white);
 }
-#skills-content>hr {
-	padding : 5px;
+ #skills-content>h1 {
+     margin: 10px 0px 10px 0px;
+     font-weight : bold;
 }
-.icon {
-	margin: auto;
-	max-width:100px;
+ #skills-content>hr {
+     padding : 5px;
 }
-.icon>i {
-	font-size: 5em;
+ .icon {
+     margin: auto;
+     max-width:100px;
 }
-.icon>p {
-	font-size: 16px;
-	margin: 0;
+ .icon>i {
+     font-size: 5em;
 }
-#projects-content {
-	background-color: var(--background-projects, white);
+ .icon>p {
+     font-size: 16px;
+     margin: 0;
 }
-#project-thumbnails {}
-#thumbnail-grid {
-	text-align: -webkit-center;
-	width: fit-content;
-	margin: auto;
+ #projects-content {
+     background-color: var(--background-projects, white);
 }
-.thumb-container {
-	padding: 5px !important;
+ #project-thumbnails {
 }
-.thumbnail {
-	padding: 0px;
-	background-color: #333;
-	border-radius: 4px;
-	margin: 10px;
-	width: 210px;
-	height: auto;
-	display: inline-block;
+ #thumbnail-grid {
+     text-align: -webkit-center;
+     width: fit-content;
+     margin: auto;
 }
-.thumbnail>p {
-	padding: 9px;
-	margin: 0px;
+ .thumb-container {
+     padding: 5px !important;
 }
-.thumbnail .figure-caption {
-	font-size: 12px;
-	color: white;
+ .thumbnail {
+     padding: 0px;
+     background-color: #333;
+     border-radius: 4px;
+     margin: 10px;
+     width: 210px;
+     height: auto;
+     display: inline-block;
 }
-.portfolio-img-bg {
-	background-color: black;
+ .thumbnail>p {
+     padding: 9px;
+     margin: 0px;
 }
-.portfolio-img {
-	width: 100%;
-	opacity: 1;
+ .thumbnail .figure-caption {
+     font-size: 12px;
+     color: white;
 }
-.portfolio-img:hover {
-	opacity: 0.5;
+ .portfolio-img-bg {
+     background-color: black;
 }
-h1 {
-	margin-top: 0px;
-	margin-bottom: 0px;
+ .portfolio-img {
+     width: 100%;
+     opacity: 1;
 }
-.vertical-btn {
-	margin: 10px 0px 10px 0px;
+ .portfolio-img:hover {
+     opacity: 0.5;
 }
+ h1 {
+     margin-top: 0px;
+     margin-bottom: 0px;
+}
+ .vertical-btn {
+     margin: 10px 0px 10px 0px;
+}
+ 
