--- a/style.css
+++ b/style.css
@@ -1,246 +1,295 @@
 :root {
-     --background-body: #313339;
-     --color-body: white;
-     --background-about: #1791D2;
-     --color-about: #313339;
-     --background-skills: white;
-     --color-skills: #1791D2;
-     --background-projects: #0576B8;
-     --color-projects: #313339;
-     --background-contact: white;
-     --color-contact: #1791D2;
-     --page-min-width: 780px;
+	--color-body: white;
+	--color-about: #313339;
+	--color-skills: #1791D2;
+	--color-projects: #313339;
+	--color-contact: #1791D2;
+	--page-min-width: 780px;
+	--background-body: #28292F;
+	--background-about: #1791D2;
+	--background-skills: white;
+	--background-projects: #0576B8;
+	--background-contact: white;
+	--background-section-title: #313339;
 }
- body {
-     min-height: 1500px;
-     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-     font-size: 20px;
-     background-color: var(--background-body, white);
-     color: #555;
-     min-width: var(--page-min-width, 780px);
-     position: relative;
+
+body {
+	min-height: 1500px;
+	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	background-color: var(--background-body, white);
+	color: #555;
+	min-width: var(--page-min-width, 780px);
+	position: relative;
 }
- #wrapper {
-     padding: 0px;
+
+#wrapper {
+	padding: 0px;
 }
- #nav {
+
+#nav {}
+
+#nav-col {
+	display: flex;
 }
- #nav-col{
-     display: flex;
+
+#navbar-name {
+	color: white;
 }
- #navbar-name{
-     color:white;
+
+.navbar {
+	height: 75px;
+	padding: 0;
+	min-width: var(--page-min-width, 780px);
 }
- .navbar {
-     height: 75px;
-     padding: 0;
-     min-width: var(--page-min-width, 780px);
+
+.navbar-inverse {
+	background-color: transparent;
+	border-color: transparent;
 }
- .navbar-inverse {
-     background-color: transparent;
-     border-color: transparent;
+
+#navbar-container {
+	margin: auto;
+	background-color: #28292F;
+	width: 100%;
+	height: 100%;
 }
- #navbar-container {
-     margin: auto;
-     background-color: #222;
-     border-color: #080808;
-     width: 100%;
-     height: 100%;
+
+.nav-link {
+	color: white;
 }
- .nav-link {
-     color: white;
+
+a.nav-link:hover {
+	color: white;
+	opacity: 0.5;
 }
- a.nav-link:hover {
-     color: white;
-     opacity: 0.5;
+
+.col {
+	padding: 0;
 }
- .col {
-     padding: 0;
+
+@media (min-width: 992px) {
+	.col-md-5 {
+		text-align: left;
+	}
 }
- @media (min-width: 992px) {
-     .col-md-5 {
-         text-align: left;
-    }
+
+#about-content {
+	display: table;
+	width: 100%;
+	background-color: var(--background-about, white);
+	color: var(--color-about, white);
 }
- #about-content {
-     display: table;
-     width: 100%;
-     background-color: var(--background-about, white);
-     color: var(--color-about, white);
+
+#about-h1 {
+	font-weight: bold;
+	font-size: 4em;
 }
- #about-h1 {
-     font-weight: bold;
-     font-size: 4em;
+
+.about-hr {
+	border-top: 2px solid var(--color-about, white);
 }
- .about-hr {
-     border-top :2px solid var(--color-about, white);
+
+.skills-hr {
+	border-top: 2px solid rgba(0, 0, 0, 0.1);
 }
- .skills-hr{
-     border-top : 2px solid rgba(0,0,0,0.1);
+
+.link-buttons {
+	display: block;
 }
- .link-buttons {
-     display: block;
+
+.web-links {
+	font-size: 4em;
+	padding: 0px 10px 0px 10px;
+	display: inline-block;
+	width: 150px;
 }
- .web-links {
-     font-size: 4em;
-     padding: 0px 10px 0px 10px;
-     display: inline-block;
-     width: 150px;
+
+#contact-content {
+	width: 100%;
+	background-color: var(--background-contact, white);
+	margin: auto;
 }
- #contact-content {
-     width: 100%;
-     background-color: var(--background-contact, white);
-     margin: auto;
+
+#form-container>hr {
+	border-top: 2px solid rgba(0, 0, 0, .2);
+	padding: 5px;
 }
- #form-container>hr {
-     border-top: 2px solid rgba(0, 0, 0, .2);
-     padding :5px;
+
+#form>hr {
+	border-top: 2px solid rgba(0, 0, 0, .2);
+	padding: 5px;
 }
- #form>hr {
-     border-top: 2px solid rgba(0, 0, 0, .2);
-     padding :5px;
+
+#form-container {
+	background-color: white;
+	width: 660px;
+	margin: auto;
+	border-radius: 5px;
+	padding: 10px;
 }
- #form-container {
-     background-color: white;
-     width: 660px;
-     margin: auto;
-     border-radius: 5px;
-     padding: 10px;
+
+.form {
+	display: inline-block;
+	width: 100%;
+	border: 0px;
 }
- .form {
-     display: inline-block;
-     width: 100%;
-     border: 0px;
+
+#submit-container {
+	width: 100%;
 }
- #submit-container {
-     width: 100%;
+
+#submit-container>input {
+	font-size: 2em;
 }
- #submit-container>input {
-     font-size: 2em;
+
+#contact-content-row {
+	margin: auto;
+	vertical-align: middle;
 }
- #contact-content-row {
-     margin: auto;
-     vertical-align: middle;
+
+.section-col {
+	max-width: 1200px;
+	margin: auto;
+	padding: 20px 50px 20px 50px;
 }
- .section-col{
-     max-width: 1200px;
-     margin: auto;
-     padding: 20px 50px 20px 50px;
+
+.section {
+	min-height: 300px;
+	width: 100%;
 }
- .section {
-     min-height: 300px;
-     width: 100%;
+
+.section-title {
+	margin: 0px;
+	padding: 10px 20px 10px 20px;
+	background-color: var(--background-section-title, #333);
+	color: white;
 }
- .section-title {
-     margin: 0px;
-     padding: 10px 20px 10px 20px;
-     background-color: #333;
-     color: white;
+
+.section-title-text {
+	margin: 0px;
+	padding: 0 10px 0 10px;
+	display: inline-block;
+	background-color: #333;
+	position: sticky;
+	z-index: 1;
 }
- .section-title-text {
-     margin: 0px;
-     padding: 0 10px 0 10px;
-     display: inline-block;
-     background-color: #333;
-     position: sticky;
-     z-index: 1;
+
+.section-title-hr {
+	margin: 0;
+	border-top-width: 2px;
+	position: relative;
+	bottom: -22px;
+	background-color: white;
+	width: 100%;
 }
- .section-title-hr {
-     margin: 0;
-     border-top-width: 2px;
-     position: relative;
-     bottom: -22px;
-     background-color: white;
-     width: 100%;
+
+.sections-dummy {
+	background-color: var(--background-section-title, #333);
+	;
 }
- .sections-dummy {
-     background-color: #222222;
+
+#dummy-top {
+	padding: 75px 0px 0px 0px;
 }
- #dummy-top {
-     padding: 75px 0px 0px 0px;
+
+#profile-picture {
+	border-radius: 50%;
+	height: auto;
+	max-width: 300px;
 }
- #dummy-bottom {
-     background-color: #222222;
+
+.profile-picture-col {
+	margin-bottom: 20px;
 }
- #profile-picture {
-     border-radius: 50%;
-     height: auto;
-     max-width: 300px;
+
+#profile-picture {
+	margin: 0px;
+	vertical-align: middle;
 }
- .profile-picture-col {
-     margin-bottom: 20px;
+
+#skills-content {
+	padding: 20px;
+	background-color: var(--background-skills, white);
 }
- #profile-picture {
-     margin: 0px;
-     vertical-align: middle;
+
+#skills-content>h1 {
+	margin: 10px 0px 10px 0px;
+	font-weight: bold;
 }
- #skills-content {
-     padding: 20px;
-     background-color: var(--background-skills, white);
+
+#skills-content>hr {
+	padding: 5px;
 }
- #skills-content>h1 {
-     margin: 10px 0px 10px 0px;
-     font-weight : bold;
+
+.icon {
+	margin: auto;
+	max-width: 100px;
 }
- #skills-content>hr {
-     padding : 5px;
+
+.icon>i {
+	font-size: 5em;
 }
- .icon {
-     margin: auto;
-     max-width:100px;
+
+.icon>p {
+	font-size: 16px;
+	margin: 0;
 }
- .icon>i {
-     font-size: 5em;
+
+#projects-content {
+	background-color: var(--background-projects, white);
 }
- .icon>p {
-     font-size: 16px;
-     margin: 0;
+
+#project-thumbnails {}
+
+#thumbnail-grid {
+	text-align: -webkit-center;
+	width: fit-content;
+	margin: auto;
 }
- #projects-content {
-     background-color: var(--background-projects, white);
+
+.thumb-container {
+	padding: 5px !important;
 }
- #project-thumbnails {
+
+.thumbnail {
+	padding: 0px;
+	background-color: var(--background-section-title, #333);
+	border-radius: 4px;
+	margin: 10px;
+	width: 210px;
+	height: auto;
+	display: inline-block;
 }
- #thumbnail-grid {
-     text-align: -webkit-center;
-     width: fit-content;
-     margin: auto;
+
+.thumbnail>p {
+	padding: 9px;
+	margin: 0px;
 }
- .thumb-container {
-     padding: 5px !important;
+
+.thumbnail .figure-caption {
+	font-size: 12px;
+	color: white;
 }
- .thumbnail {
-     padding: 0px;
-     background-color: #333;
-     border-radius: 4px;
-     margin: 10px;
-     width: 210px;
-     height: auto;
-     display: inline-block;
+
+.portfolio-img-bg {
+	background-color: black;
 }
- .thumbnail>p {
-     padding: 9px;
-     margin: 0px;
+
+.portfolio-img {
+	width: 100%;
+	opacity: 1;
 }
- .thumbnail .figure-caption {
-     font-size: 12px;
-     color: white;
+
+.portfolio-img:hover {
+	opacity: 0.5;
 }
- .portfolio-img-bg {
-     background-color: black;
+
+h1 {
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
- .portfolio-img {
-     width: 100%;
-     opacity: 1;
+
+.vertical-btn {
+	margin: 10px 0px 10px 0px;
 }
- .portfolio-img:hover {
-     opacity: 0.5;
-}
- h1 {
-     margin-top: 0px;
-     margin-bottom: 0px;
-}
- .vertical-btn {
-     margin: 10px 0px 10px 0px;
-}
- 
