--- a/style.css
+++ b/style.css
@@ -17,11 +17,14 @@ body {
 	min-height: 1500px;
 	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 20px;
+	background-color: #28292F;
 	background-color: var(--background-body, white);
 	color: #555;
+	min-width: 780px;
 	min-width: var(--page-min-width, 780px);
 	position: relative;
 }
+
 
 #wrapper {
 	padding: 0px;
@@ -64,7 +67,7 @@ a.nav-link:hover {
 	opacity: 0.5;
 }
 
-.col {
+.col-12 {
 	padding: 0;
 }
 
@@ -77,8 +80,14 @@ a.nav-link:hover {
 #about-content {
 	display: table;
 	width: 100%;
+	background-color: #1791D2;
 	background-color: var(--background-about, white);
+	color: #313339;
 	color: var(--color-about, white);
+}
+
+.about-text{
+	min-width: 100%;
 }
 
 #about-h1 {
@@ -87,6 +96,7 @@ a.nav-link:hover {
 }
 
 .about-hr {
+	border-top: #313339;
 	border-top: 2px solid var(--color-about, white);
 }
 
@@ -107,6 +117,7 @@ a.nav-link:hover {
 
 #contact-content {
 	width: 100%;
+	background-color: white;
 	background-color: var(--background-contact, white);
 	margin: auto;
 }
@@ -162,6 +173,7 @@ a.nav-link:hover {
 .section-title {
 	margin: 0px;
 	padding: 10px 20px 10px 20px;
+	background-color: #313339;
 	background-color: var(--background-section-title, #333);
 	color: white;
 }
@@ -185,8 +197,8 @@ a.nav-link:hover {
 }
 
 .sections-dummy {
+	background-color: #313339;
 	background-color: var(--background-section-title, #333);
-	;
 }
 
 #dummy-top {
@@ -210,6 +222,7 @@ a.nav-link:hover {
 
 #skills-content {
 	padding: 20px;
+	background-color: white;
 	background-color: var(--background-skills, white);
 }
 
@@ -237,6 +250,7 @@ a.nav-link:hover {
 }
 
 #projects-content {
+	background-color: #1791D2;
 	background-color: var(--background-projects, white);
 }
 
@@ -254,6 +268,7 @@ a.nav-link:hover {
 
 .thumbnail {
 	padding: 0px;
+	background-color:#313339;
 	background-color: var(--background-section-title, #333);
 	border-radius: 4px;
 	margin: 10px;
