--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 	--color-contact: #1791D2;
 	--page-min-width: 780px;
 	--background-body: #28292F;
-	--background-about: #1791D2;
+	--background-about: white;
 	--background-skills: white;
 	--background-projects: #0576B8;
 	--background-contact: white;
