--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@
      background-color: #28292F;
      background-color: var(--background-body, white);
      color: #555;
-     min-width: 780px;
-     min-width: var(--page-min-width, 780px);
+   /*  min-width: 780px;
+     min-width: var(--page-min-width, 780px);*/
      position: relative;
 }
  #wrapper {
