--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@
      margin: auto;
      padding: 20px 50px 20px 50px;
      height: 100%;
+     max-width: 80%;
 }
  .section {
      min-height: 300px;
