--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
          display: none;
     }
 }
- @media (max-width: 530px) {
+ @media (max-width: 580px) {
      #horizontal-nav-pills {
          display: none;
     }
@@ -85,7 +85,7 @@
 	background-color: #28292f !important;
 }
 
- @media (min-width: 530px) {
+ @media (min-width: 580px) {
      .collapse {
          display: none;
     }
@@ -95,6 +95,9 @@
      #collapse-menu {
          display: none;
     }
+	 .section-col {
+     max-width: 80%;
+	}
 }
  #vertical-nav-pills {
      display: block !important;
@@ -238,7 +241,6 @@
      margin: auto;
      padding: 20px 50px 20px 50px;
      height: 100%;
-     max-width: 80%;
 }
  .section {
      min-height: 300px;
