--- a/style.css
+++ b/style.css
@@ -123,6 +123,9 @@
  #about-p{
      padding: 10px;
 }
+#about-text{
+     width: 100%;
+}
  .skills-hr {
      border-top: 2px solid rgba(0, 0, 0, 0.1);
 }
