--- a/style.css
+++ b/style.css
@@ -275,10 +275,8 @@
      padding: 10px;
      margin: 20px 0 20px 0;
 }
- .icon {
-}
  .icon>i {
-     font-size: 5em;
+     font-size: 10vw;
 }
  .icon>p {
      font-size: 16px;
